<resources>
    <string name="app_name">Blue Sea User</string>
    <string name="signup">إنشاء حساب</string>
    <string name="username">اسم المستخدم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="have_an_account">لديك حساب؟</string>
    <string name="log_in">تسجيل دخول</string>
    <string name="date_sample">29 أبريل</string>
    <string name="available_seats">مقاعد متوفرة</string>
    <string name="booked">محجوز</string>
    <string name="book">احجز</string>
    <string name="trip_status">حالة الرحلة</string>
    <string name="to_destination">إلى الوجهة</string>
    <string name="locationPermission_needed">صلاحية الدخول للموقع مطلوبة</string>
    <string name="captain_going_to_position">الكابتن متجه لميناء الانطلاق</string>
    <string name="captain_going_to_destination">الكابتن متجه لميناء الوجهة</string>
    <string name="captain_arrived">الرحلة وصلت</string>
    <string name="ok">ok</string>
    <string name="user_name_is_required">اسم المستخدم مطلوب</string>
    <string name="email_is_needed">البريد الاكتروني مطلوب</string>
    <string name="password_is_required">كلمة المرور مطلوبة</string>
    <string name="password_must_be_6_digits_or_more">كلمة المرور يجب ان تكون من ٦ احرف او اكثر</string>
    <string name="acconte_is_created">تم انشاء الحساب</string>
    <string name="error">حدث خطا</string>
    <string name="invalid_email">البريد الاكتروني غير صالح</string>
    <string name="invalid_password_length">كلمة المرور يجب ان تكون اكبر ٦</string>
    <string name="login_error">فشل في تسجيل الدخول</string>
    <string name="photo_selected_error">خطآ في تحميل الصورة</string>
    <string name="choose_photo">اختر صورة</string>
    <string name="current_trip">Current Trip</string>
    <string name="trip_list">Trip List</string>
    <string name="photo_Selection_error">خطآ في تحميل الصورة</string>
    <string name="trip_going_to_destination">الرحلة متجهة لميناء الوجهة</string>
    <string name="trip_arrived">الرحلة وصلت الى وجهتها</string>
    <string name="location_permission_needed">صلاحية الدخول للموقع مطلوبة</string>
    <string name="no_available_seats_to_book">لا يوجد مقاعد متوفرة للحجز</string>
    <string name="user_profile">معلومات المستخدم</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="action_log_out">تسجيل خروج</string>
    <string name="failed_image_download">فشل في تحميل الصورة</string>
    <string name="image_is_required">الصورة مطلوبة</string>
    <string name="log_in_successfull">تم تسجيل الدخول بنجاح</string>
    <string name="user_info_added">تم اضافة معلومات المستخدم</string>
    <string name="error_user_cannot_signUp">فشل في تسجيل مستخدم جديد</string>
    <string name="user_email">الايميل</string>
    <string name="phone_no">رقم الهاتف</string>
    <string name="add_phone_no">"من فضلك ادخل رقم الهاتف "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seat_is_reserved">تم حجز المقعد بنجاح</string>
    <string name="trip_is_reserved">الرحلة محجوزة مسبقا</string>
    <string name="book_trip">احجز رحلة</string>
    <string name="you_have_trip_at_the_same_time">لديك رحلة في نفس الوقت لا يمكنك حجز هذه الرحلة</string>
    <string name="going_to_destination">الى الوجهة</string>
    <string name="no_user">لم يتم العثور على مستخد</string>
    <string name="cancel">الغاء الحجز</string>
    <string name="update_profile">تحديث</string>
    <string name="arrived">تم الوصول للوجهة</string>

</resources>
